enable command retries in BaseLircClient